kubernetes/test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umborg-web-ingress
  namespace: umborg-web-test
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "30M"
spec:
  rules:
  - host: umborg-web-test.andrewkmorrison.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: umborg-web-service
            port:
              number: 80
