kubernetes/test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umborg-web-service
  namespace: umborg-web-test
spec:
  selector:
    app: umborg-web
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
  type: ClusterIP
